--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -52,7 +52,7 @@
     <string name="notification_label">Notification</string>
     <string name="ringtone_label">Ringtone</string>
 
-    <string name="unknown_author">Author unknown</string>
+    <string name="unknown_author">Unknown author</string>
 
     <string name="font_preview_letters">AaBbCcDd123</string>
 
@@ -62,12 +62,9 @@
     <string name="menu_item_playstore_themes">Playstore Themes</string>
     <string name="menu_item_restart_systemui">Restart SystemUI</string>
 
-    <!-- Shown when the user clicks 'Get More' button from the themes list screen -->
-    <string name="get_more_description">You can get more themes from the following links:</string>
     <string name="get_more_app_not_available">App not available</string>
-
-    <string name="get_more_entry_play_store">Play Store</string>
-    <string name="get_more_entry_cm_wiki">More info on the CM Wiki</string>
+    <string name="play_store_url" translatable="false">https://play.google.com/store/search?q=theme+engine&amp;c=apps</string>
+    <string name="wiki_url" translatable="false">http://wiki.cyanogenmod.org/w/Themes</string>
 
     <string name="designed_for_cm11">Designed for CM11</string>
 </resources>
